fix: make pop up overlap

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -190,7 +190,7 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  z-index: 10000;
+  z-index: 2000;
 }
 
 /* Seção de Login */
